syntax = "proto3";
option java_package = "me.chandlersong.protobuf";
option java_outer_classname = "PersonFactory";

import "google/protobuf/any.proto";

message Person {
     int32 id = 1;
     string name = 2;
     string email = 3;

     repeated google.protobuf.Any details = 4;

     oneof test_oneof {
         string sub_message1 = 5;
         string sub_message2 = 6;
       }
}

message EnumExamples {

    EnumAllowingAlias enum1 = 1;

    enum EnumAllowingAlias {
      option allow_alias = true;
      UNKNOWN = 0;
      STARTED = 1;
      RUNNING = 1;
    }
}